first test, ready for Remote pair